dist/1.0/bin/sample/retrieveUnpackaged/objects/Cost_Group__c.object
<CustomObject>
    <description>Solution base</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inventory__c</fullName>
        <label>Inventory</label>
        <referenceTo>Inventory__c</referenceTo>
        <relationshipName>Packages1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Cost Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Inventory__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CG{00000000}</displayFormat>
        <label>Cost Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cost Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Name_not_null</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Name__c )</errorConditionFormula>
        <errorDisplayField>Name__c</errorDisplayField>
        <errorMessage>You must enter a Name value</errorMessage>
    </validationRules>
</CustomObject>